# AsioClientServer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
client/: CMakeLists.txt
client/include/acs/cmd/: AsyncCommandLoop.hpp  CommandDispatcher.hpp  CommandHandler.hpp
client/include/acs/conn/: AsyncTcpClient.hpp  SyncTcpClient.hpp
client/include/acs/context/: ClientContext.hpp
client/include/acs/echo/: EchoCommandHandler.hpp
client/include/acs/message/: EchoMessage.hpp
client/src/: main.cpp
client/src/cmd/: AsyncCommandLoop.cpp  CommandDispatcher.cpp
client/src/conn/: AsyncTcpClient.cpp  SyncTcpClient.cpp
client/src/echo/: EchoCommandHandler.cpp
client/src/main/: main.cpp
client/src/main/conn/tcp/: SyncTcpClient.cpp  SyncTcpClient.hpp
cmake/: FindAsio.cmake
common/: CMakeLists.txt
common/include/acs/conn/: AsyncReader.hpp  AsyncWriter.hpp
common/include/acs/message/: BaseMessage.hpp  EchoHandler.hpp  Message.hpp  MessageRegisterer.hpp  MessageRegistry.hpp
common/include/acs/proto/: PolymorphicMsgProtocol.hpp  Protocol.hpp
common/include/acs/util/: Identity.hpp  Logger.hpp  SimpleLogger.hpp
common/proto/: CMakeLists.txt  chat.proto  echo.proto  framing.proto
common/src/conn/: AsyncWriter.cpp
common/src/main/conn/protocol/: chat.proto
common/src/main/core/: Application.hpp
common/src/main/util/: SimpleLogger.hpp
common/src/proto/: PolymorphicMsgProtocol.cpp  Protocol.cpp
common/src/test/: ThreadTest.cpp  TimerTest.cpp
common/src/test/util/: SimpleLoggerTest.cpp
common/src/util/: Logger.cpp
common/tests/: CMakeLists.txt
common/tests/util/: LoggerTest.cpp  SimpleLoggerTest.cpp
docs/: Doxyfile
protobufTest/: book.data
server/: CMakeLists.txt
server/include/acs/conn/: AsyncTcpServer.hpp  ConnectionManager.hpp  ConnectionStateListener.hpp  TcpConnection.hpp
server/include/acs/context/: ConnectionContext.hpp  ContextResolver.hpp
server/include/acs/debug/: TestClientHandler.hpp
server/include/acs/echo/: EchoClientHandler.hpp
server/include/acs/logic/: ClientHandler.hpp
server/include/acs/message/: EchoMessage.hpp
server/src/: main.cpp
server/src/conn/: AsyncTcpServer.cpp  TcpConnection.cpp
server/src/debug/: TestClientHandler.cpp
server/src/echo/: EchoClientHandler.cpp
server/src/main/: main.cpp
server/src/main/conn/: ConnectionManager.hpp  ConnectionStateListener.hpp
server/src/main/conn/tcp/: AsyncTcpServer.cpp  AsyncTcpServer.hpp  TcpConnection.hpp
server/src/message/: EchoMessage.cpp
